fix: https CORS

--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,6 @@ ENV = 'development'
 
 # base api
 
-VUE_APP_BASE_API = 'http://api.artimind.top'
+VUE_APP_BASE_API = 'http://rtx4.vmip.com.cn:36102'
 
 
